--- a/src/app/event-summary/event-summary.component.html
+++ b/src/app/event-summary/event-summary.component.html
@@ -12,7 +12,7 @@
       <li *ngIf="dateValidityProvider.sameDay">
         <fa-icon [icon]="['far', 'clock']"></fa-icon>
         {{' '}}{{'event-days.single-day.hours'|translate: {'0': dateValidityProvider.formattedBeginTime[translate.currentLang], '1': dateValidityProvider.formattedEndTime[translate.currentLang]} }}
-        <fa-icon [icon]="['fas', 'info-circle']" class="text-info" ngbTooltip="{{'show-event.timezone.warn' | translate:{'0': dateValidityProvider.timeZone} }}"></fa-icon>
+        <fa-icon *ngIf="displayTimeZoneInfo" [icon]="['fas', 'info-circle']" class="text-info" ngbTooltip="{{'show-event.timezone.warn' | translate:{'0': dateValidityProvider.timeZone} }}"></fa-icon>
       </li>
       <!-- more than one day-->
       <li *ngIf="!dateValidityProvider.sameDay">
@@ -21,7 +21,7 @@
           {{' - '}}
           {{'event-days.not-same-day'|translate: {'0': dateValidityProvider.formattedEndDate[translate.currentLang], '1': dateValidityProvider.formattedEndTime[translate.currentLang]} }}
           {{' '}}
-          <fa-icon [icon]="['fas', 'info-circle']" class="text-info" ngbTooltip="{{'show-event.timezone.warn' | translate:{'0': dateValidityProvider.timeZone} }}"></fa-icon>
+          <fa-icon *ngIf="displayTimeZoneInfo" [icon]="['fas', 'info-circle']" class="text-info" ngbTooltip="{{'show-event.timezone.warn' | translate:{'0': dateValidityProvider.timeZone} }}"></fa-icon>
       </li>
 
 
