enable "select on tab"

--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -69,7 +69,10 @@
       <div class="col-12" [ngClass]="{'col-md-6': customerReferenceEnabled && invoiceBusiness}">
           <div class="form-group">
               <label for="vatCountry" class="control-label">{{'reservation-page-complete.country' | translate}}{{' *'}}</label>
-              <ng-select placeholder="{{'reservation-page.country.select'|translate}}" [items]="countries" bindLabel="name" bindValue="isoCode" formControlName="vatCountryCode" id="vatCountry" class="form-control field-required" [searchFn]="searchCountry" required appInvalidFeedback>
+              <ng-select placeholder="{{'reservation-page.country.select'|translate}}" 
+                        [items]="countries" bindLabel="name" bindValue="isoCode" selectOnTab="true"
+                        formControlName="vatCountryCode" id="vatCountry" class="form-control field-required" 
+                        [searchFn]="searchCountry" required appInvalidFeedback>
                   <ng-template ng-option-tmp let-item="item">{{item.isoCode}} - {{item.name}}</ng-template>
                   <ng-template ng-label-tmp let-item="item">{{item.isoCode}} - {{item.name}}</ng-template>
                   <ng-template ng-notfound-tmp let-searchTerm="searchTerm"></ng-template>
