--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -73,8 +73,8 @@
                         [items]="countries" bindLabel="name" bindValue="isoCode" selectOnTab="true"
                         formControlName="vatCountryCode" id="vatCountry" class="form-control field-required" 
                         [searchFn]="searchCountry" required appInvalidFeedback>
-                  <ng-template ng-option-tmp let-item="item">{{item.isoCode}} - {{item.name}}</ng-template>
-                  <ng-template ng-label-tmp let-item="item">{{item.isoCode}} - {{item.name}}</ng-template>
+                  <ng-template ng-option-tmp let-item="item">{{item.name}} ({{item.isoCode}})</ng-template>
+                  <ng-template ng-label-tmp let-item="item">{{item.name}} ({{item.isoCode}})</ng-template>
                   <ng-template ng-notfound-tmp let-searchTerm="searchTerm"></ng-template>
               </ng-select>
           </div>
