update not found layout

--- a/src/app/reservation/not-found/not-found.component.html
+++ b/src/app/reservation/not-found/not-found.component.html
@@ -1,2 +1,2 @@
-<p>{{'reservation-page-not-found.reservation-with-id-does-not-exist'|translate: {'0':reservationId} }}</p>
-<p [innerHTML]="'reservation-page-not-found.go-back-to-event' | translate: {'0': eventUrl}"></p>
+<h4 class="mt-5 text-center">{{'reservation-page-not-found.reservation-with-id-does-not-exist'|translate: {'0': reservationId|uppercase|slice:0:8} }}</h4>
+<h5 class="mt-5 text-center" [innerHTML]="'reservation-page-not-found.go-back-to-event' | translate: {'0': eventUrl}"></h5>
