--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -6,7 +6,7 @@
       <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <textarea *ngSwitchCase="'textarea'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="placeholder" formControlName="0" appInvalidFeedback></textarea>
-      <ng-select *ngSwitchCase="'country'" [attr.id]="ticketUUID + '-' + field.name" class="custom-select" formControlName="0" appInvalidFeedback [items]="countries" bindLabel="name" bindValue="isoCode">
+      <ng-select *ngSwitchCase="'country'" [attr.id]="ticketUUID + '-' + field.name" formControlName="0" appInvalidFeedback [items]="countries" bindLabel="name" bindValue="isoCode">
         <ng-template ng-notfound-tmp let-searchTerm="searchTerm"></ng-template>
       </ng-select>
       <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="custom-select" formControlName="0" appInvalidFeedback>
