--- a/src/app/event-display/event-display.component.scss
+++ b/src/app/event-display/event-display.component.scss
@@ -1,3 +1,6 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+
 .promo-code-input {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
@@ -9,4 +12,8 @@
 
 .badge-block {
   display: block;
+}
+
+.text-muted .btn-link {
+  color: $text-muted;
 }
