--- a/src/app/item-card/item-card.html
+++ b/src/app/item-card/item-card.html
@@ -1,7 +1,7 @@
 <div class="card mt-4" [formGroup]="parentFormGroup" [ngClass]="additionalClass">
   <div class="card-body">
-    <div class="d-flex w-100 justify-content-between">
-      <div class="d-flex flex-grow-1 justify-content-between pr-md-5">
+    <div class="d-flex w-100 justify-content-md-between">
+      <div class="d-flex flex-grow-1 justify-content-md-between pr-md-5">
         <div>
           <h4 class="card-title pr-1">
             <ng-content select=".item-title"></ng-content>
@@ -10,7 +10,7 @@
             <app-item-sale-period [item]="item" [currentLang]="currentLang"></app-item-sale-period>
           </div>
         </div>
-        <div>
+        <div class="d-none d-md-block">
           <ng-content select=".item-price"></ng-content>
         </div>
       </div>
@@ -18,13 +18,15 @@
         <ng-content select=".item-qty-selector"></ng-content>
       </div>
     </div>
-    <div class="d-md-none"><!-- mobile layout -->
-      <ng-content select=".badge-sale-period"></ng-content>
-    </div>
-    <div class="d-md-none mt-3">
+    <!-- mobile layout -->
+    <div class="d-md-none">
       <app-item-sale-period [item]="item" [currentLang]="currentLang"></app-item-sale-period>
+      <div class="d-flex justify-content-between">
+        <ng-content select=".item-price-mobile"></ng-content>
+        <ng-content select=".badge-sale-period"></ng-content>
+      </div>
       <div class="mt-3">
-        <ng-content select=".item-qty-selector-mobile"></ng-content>
+          <ng-content select=".item-qty-selector-mobile"></ng-content>
       </div>
     </div>
     <div class="card-text pt-2">
