--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -202,11 +202,7 @@
       <app-recaptcha [apiKey]="event.captchaConfiguration.recaptchaApiKey" (recaptchaResponse)="handleRecaptchaResponse($event)" *ngIf="event.captchaConfiguration.captchaForTicketSelection && event.captchaConfiguration.recaptchaApiKey"></app-recaptcha>
 
       <hr class="mt-5">
-      <div class="mb-5 d-md-flex text-center text-md-left justify-content-md-center">
-        <div><a [href]="event.privacyPolicyUrl" target="_blank">{{'reservation-page.tc.link.text'|translate}}</a></div>
-        <div class="ml-3 mr-3 d-none d-md-block" *ngIf="event.privacyPolicyUrl">&ndash;</div>
-        <div *ngIf="event.privacyPolicyUrl"><a [href]="event.privacyPolicyUrl" target="_blank">{{'reservation-page.privacy.link.text'|translate}}</a></div>
-      </div>
+      <app-event-footer-links [event]="event"></app-event-footer-links>
 
       <div class="row d-flex justify-content-between mobile-add-margin-bottom">
         <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
