--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -90,11 +90,7 @@
 
     <div class="mt-3 mb-3"><strong>*</strong>{{' '}}<span translate="common.required-fields"></span></div>
     <hr class="mt-5">
-    <div class="mb-5 d-md-flex text-center text-md-left justify-content-md-center">
-      <div><a [href]="event.privacyPolicyUrl" target="_blank">{{'reservation-page.tc.link.text'|translate}}</a></div>
-      <div class="ml-3 mr-3 d-none d-md-block" *ngIf="event.privacyPolicyUrl">&ndash;</div>
-      <div *ngIf="event.privacyPolicyUrl"><a [href]="event.privacyPolicyUrl" target="_blank">{{'reservation-page.privacy.link.text'|translate}}</a></div>
-    </div>
+    <app-event-footer-links [event]="event"></app-event-footer-links>
 
 
     <div class="row d-flex justify-content-between mobile-add-margin-bottom">
