--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -20,26 +20,28 @@
       </div>
 
       <div class="col-12 col-md-4 invoice-details" *ngIf="!reservationInfo.orderSummary.free && event.invoicingConfiguration.invoiceAllowed">
-        <div class="d-flex flex-column justify-content-between h-100">
+        <div class="d-flex flex-column justify-content-center h-100">
           <h5 class="d-none d-md-block" translate="reservation-page.invoice-details"></h5>
-          <div class="page-header d-block d-md-none" translate="reservation-page.invoice-details"></div>
-          <div>
-            <address *ngIf="reservationInfo.invoiceRequested" class="text-left">
-              <div class="preformatted">{{reservationInfo.billingAddress}}</div>
-              <div *ngIf="hasTaxId">{{'invoice.vat' |translate: {'0': ('common.vat' | translate)} }} {{reservationInfo.billingDetails.taxId}}</div>
-              <hr *ngIf="enabledItalyEInvoicing"/>
-              <h5 class="d-none d-md-block" *ngIf="enabledItalyEInvoicing" translate="invoice-fields.addresseeItalyEInvoice"></h5>
-              <div *ngIf="enabledItalyEInvoicing">{{'invoice-fields.fiscalCode'|translate}}{{': '}}{{italyEInvoicingFiscalCode}}</div>
-              <div *ngIf="enabledItalyEInvoicing && italyEInvoicingReference != null">
-                {{(italyEInvoicingSelectedAddresseeKey | translate) + ': ' + italyEInvoicingReference}}
-              </div>
-            </address>
-            <div *ngIf="!reservationInfo.invoiceRequested">
-              <div class="mt-2" translate="reservation-page.no-invoice-requested"></div>
+          <div class="page-header d-block d-md-none"><h2 translate="reservation-page.invoice-details"></h2></div>
+          <div class="row">
+            <div class="col-12" *ngIf="reservationInfo.invoiceRequested">
+              <address class="text-left">
+                <div class="preformatted">{{reservationInfo.billingAddress}}</div>
+                <div *ngIf="hasTaxId">{{'invoice.vat' |translate: {'0': ('common.vat' | translate)} }} {{reservationInfo.billingDetails.taxId}}</div>
+                <hr *ngIf="enabledItalyEInvoicing"/>
+                <h5 class="d-none d-md-block" *ngIf="enabledItalyEInvoicing" translate="invoice-fields.addresseeItalyEInvoice"></h5>
+                <div *ngIf="enabledItalyEInvoicing">{{'invoice-fields.fiscalCode'|translate}}{{': '}}{{italyEInvoicingFiscalCode}}</div>
+                <div *ngIf="enabledItalyEInvoicing && italyEInvoicingReference != null">
+                  {{(italyEInvoicingSelectedAddresseeKey | translate) + ': ' + italyEInvoicingReference}}
+                </div>
+              </address>
             </div>
-          </div>
-          <div class="mt-2">
-            <button type="button" class="btn btn-secondary" (click)="back(true)"><fa-icon [icon]="['far', 'edit']"></fa-icon>{{' '}}{{(reservationInfo.invoiceRequested ? 'common.edit' : 'reservation-page.request-invoice') | translate}}</button>
+            <div class="col-7 col-md-12 mt-md-3" *ngIf="!reservationInfo.invoiceRequested">
+              <div class="h-100 d-flex flex-column justify-content-center"><span translate="reservation-page.no-invoice-requested"></span></div>
+            </div>
+            <div class="col-5 col-md-12 mt-md-3">
+              <button type="button" class="btn btn-secondary" (click)="back(true)"><fa-icon [icon]="['far', 'edit']"></fa-icon>{{' '}}{{(reservationInfo.invoiceRequested ? 'common.edit' : 'reservation-page.request-invoice') | translate}}</button>
+            </div>
           </div>
         </div>
       </div>
