--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -1,3 +1,4 @@
+<app-reservation>
 
 <div class="alert alert-success alert-dismissible" role="alert" *ngIf="reservationMailSent">
   <button type="button" class="close" (click)="reservationMailSent = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
@@ -110,3 +111,5 @@
       <span class="text-muted"><a href="https://alf.io" [attr.title]="'alfio.credits' | translate" target="_blank" rel="noreferrer noopener" translate="alfio.credits"></a></span>
   </div>
 </div>
+
+</app-reservation>
