--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -1,3 +1,5 @@
+<app-reservation>
+
 <div *ngIf="reservationInfo && event">
 
   <app-stepper [currentStep]="3" [free]="reservationInfo.orderSummary.free"></app-stepper>
@@ -160,3 +162,5 @@
     </div>
   </form>
 </div>
+
+</app-reservation>
