--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="event" class="add-margin-bottom">
     <app-event-header [event]="event"></app-event-header>
     <hr>
-    <router-outlet></router-outlet>
+    <ng-content></ng-content>
 </div>
