add main/header elements

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="event" class="add-margin-bottom">
-    <app-event-header [event]="event"></app-event-header>
+    <header><app-event-header [event]="event"></app-event-header></header>
+    <main>
 
     <hr>
 
@@ -210,4 +211,5 @@
       </div>
     </form>
 
+    </main>
 </div>
