--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="event && ticketInfo" class="add-margin-bottom">
-  <app-event-header [event]="event"></app-event-header>
+<header><app-event-header [event]="event"></app-event-header></header>
+<main>
 
   <hr>
 
@@ -42,4 +43,5 @@
       </div>
       
   </div>
+</main>
 </div>
