--- a/src/app/event-header/event-header.component.html
+++ b/src/app/event-header/event-header.component.html
@@ -1,7 +1,7 @@
 <app-language-selector [contentLanguages]="event.contentLanguages"></app-language-selector>
 <div class="row">
   <div class="col-12 col-sm-7 col-md-4">
-    <img class="img-responsive" [alt]="event.displayName" [src]="'/file/'+event.fileBlobId">
+    <img class="img-responsive" alt="" aria-hidden="true" [src]="'/file/'+event.fileBlobId">
   </div>
   <div class="col-12 col-sm-5 col-md-8 text-center">
     <h1>{{event.displayName}}</h1>
