--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -110,7 +110,7 @@
           <div class="badge-sale-period">
             <span class="badge badge-warning" *ngIf="ticketsLeftCountVisibleForCategory(category)">{{"show-event.tickets.left" | translate: {'0': category.availableTickets} }}</span>
           </div>
-          <div class="item-qty-selector-mobile">
+          <!--<div class="item-qty-selector-mobile">
               <app-ticket-quantity-selector [parentGroup]="reservationFormItem(reservationForm, counter)" [category]="category" [quantityRange]="ticketCategoryAmount[category.id]"></app-ticket-quantity-selector>
           </div>
           <div class="item-price-mobile">
@@ -118,7 +118,7 @@
             <span *ngIf="!category.free">
               <app-price-tag [event]="event" class="h6" [formattedPrice]="category.formattedFinalPrice" [showTaxDetails]="true" [discountedPrice]="category.formattedDiscountedPrice" [showDiscount]="category.hasDiscount"></app-price-tag>
             </span>
-          </div>
+          </div>-->
         </app-item-card>
       </div>
 
